--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.9",
+    "path-to-regexp": "^8.2.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
